[feature] - keep keyword and properties as one structure
- update all factories with DefinitionAwareMap to read properties

--- a/src/groovydoc/resources/overview-summary.html
+++ b/src/groovydoc/resources/overview-summary.html
@@ -32,7 +32,7 @@
     <li><a href="net/simonix/dsl/jmeter/factory/config/VariablesFactory.html">variables</a> - defines 'User Defined Variables' config element</li>
     <li><a href="net/simonix/dsl/jmeter/factory/config/VariableFactory.html">variable</a> - defines single user variable</li>
     <li><a href="net/simonix/dsl/jmeter/factory/common/BodyFactory.html">body</a> - defines body for 'HTTP Request' sampler</li>
-    <li><a href="net/simonix/dsl/jmeter/factory/common/InsertFactory.html">insert</a> - defines insert point for external script</li>
+    <li><a href="net/simonix/dsl/jmeter/factory/common/InsertFactory.html">insert</a> - defines insert element for external script</li>
     <li><a href="net/simonix/dsl/jmeter/factory/common/ParamsFactory.html">params</a> - defines parameters for 'HTTP Request' sampler</li>
     <li><a href="net/simonix/dsl/jmeter/factory/common/ParamFactory.html">param</a> - defines single parameter for 'HTTP Request' sampler</li>
 </ul>
@@ -55,7 +55,7 @@
     <li><a href="net/simonix/dsl/jmeter/factory/common/ParamsFactory.html">params</a> - defines parameters for 'HTTP Request' sampler</li>
     <li><a href="net/simonix/dsl/jmeter/factory/common/ParamFactory.html">param</a> - defines single parameter for 'HTTP Request' sampler</li>
     <li><a href="net/simonix/dsl/jmeter/factory/common/BodyFactory.html">body</a> - defines body for 'HTTP Request' sampler</li>
-    <li><a href="net/simonix/dsl/jmeter/factory/sampler/JSR223SamplerFactory.html">jsrsampler</a> - defines body for 'HTTP Request' sampler</li>
+    <li><a href="net/simonix/dsl/jmeter/factory/sampler/JSR223SamplerFactory.html">jsrsampler</a> - defines 'JSR223' sampler</li>
 </ul>
 <h3>Assertion elements</h3>
 <ul>
